package ontap.decorator_trangtrianh;

public abstract class Picture {
    public abstract void show();
}
